// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-segmented-control-beta #render should render as expected 1`] = `
<gux-segmented-control-beta value="day" role="group">
  <template shadowrootmode="open">
    <slot>
    </slot>
  </template>
  <gux-segmented-control-item value="month">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container gux-start">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Month
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="week">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Week
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="day">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Day
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="hour" disabled="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false" disabled="">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Hour
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="minute">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container gux-end">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Minute
    </div>
  </gux-segmented-control-item>
</gux-segmented-control-beta>
`;

exports[`gux-segmented-control-beta onSlotchange should set selected items as expected 1`] = `
<gux-segmented-control-beta value="day" role="group">
  <template shadowrootmode="open">
    <slot>
    </slot>
  </template>
  <gux-segmented-control-item value="month">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container gux-start">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Month
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="week">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Week
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="day">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Day
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="hour" disabled="">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container">
        <button class="gux-segmented-control-item" type="button" aria-current="false" disabled="">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Hour
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="minute">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container gux-end">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>
    <div slot="text">
      Minute
    </div>
  </gux-segmented-control-item>
  <gux-segmented-control-item value="second">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-container gux-end">
        <button class="gux-segmented-control-item" type="button" aria-current="false">
          <span class="gux-text">
            <slot name="text">
            </slot>
          </span>
        </button>
      </div>
    </template>Second
  </gux-segmented-control-item>
</gux-segmented-control-beta>
`;
